# rustc-rayon

./: Cargo.toml
rayon-core/: Cargo.toml
rayon-core/src/: job.rs  latch.rs  lib.rs  log.rs  registry.rs
rayon-core/src/join/: mod.rs
rayon-core/src/scope/: mod.rs
rayon-core/src/sleep/: counters.rs  mod.rs
rayon-core/src/spawn/: mod.rs
rayon-core/src/thread_pool/: mod.rs
rayon-demo/: Cargo.toml
rayon-demo/src/life/: mod.rs
rayon-futures/: Cargo.toml
rayon-plot/: Cargo.toml
rayon-plot/src/: data.rs  main.rs  plot.rs  stats.rs
src/: lib.rs
